--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.0
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
